--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "serve": "^14.0.1",
     "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
